fixed issue with display on smaller mobiles causing cards text to overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-section {
+/* section {
     padding: 5%;
-}
+} */
 
 /* colour scheme */
 
